--- a/client/package.json
+++ b/client/package.json
@@ -7,30 +7,45 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
+    "@base-ui/react": "^1.2.0",
+    "@fontsource-variable/roboto": "^5.2.9",
+    "@tabler/icons-react": "^3.36.1",
+    "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.21",
-    "@tanstack/react-router": "^1.159.5",
-    "@tanstack/react-router-devtools": "^1.159.5",
-    "@tanstack/react-router-ssr-query": "^1.159.5",
-    "@vitejs/plugin-react": "^5.1.4",
+    "@tanstack/react-router": "^1.159.10",
+    "@tanstack/react-router-ssr-query": "^1.159.10",
+    "@tanstack/router-plugin": "^1.159.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "shadcn": "^3.8.4",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.17",
+    "tw-animate-css": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@tanstack/router-plugin": "^1.159.5",
+    "@storybook/addon-docs": "^10.2.8",
+    "@storybook/react-vite": "^10.2.8",
+    "@tanstack/react-router-devtools": "^1.159.10",
     "@types/node": "^24.10.1",
-    "@types/react": "^19.2.7",
+    "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
-    "@vitejs/plugin-react-swc": "^4.2.2",
+    "@vitejs/plugin-react": "^5.1.1",
     "eslint": "^9.39.1",
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
+    "eslint-plugin-storybook": "^10.2.8",
     "globals": "^16.5.0",
+    "storybook": "^10.2.8",
     "typescript": "~5.9.3",
-    "typescript-eslint": "^8.48.0",
-    "vite": "^7.3.1"
+    "typescript-eslint": "^8.46.4",
+    "vite": "^7.2.4"
   }
 }
