--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,14 @@
   "dependencies": {
     "@base-ui/react": "^1.2.0",
     "@fontsource-variable/roboto": "^5.2.9",
+    "@t3-oss/env-core": "^0.13.10",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.159.10",
     "@tanstack/react-router-ssr-query": "^1.159.10",
     "@tanstack/router-plugin": "^1.159.12",
+    "better-auth": "^1.4.18",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "react": "^19.2.0",
@@ -27,7 +29,8 @@
     "shadcn": "^3.8.4",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
-    "tw-animate-css": "^1.4.0"
+    "tw-animate-css": "^1.4.0",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
