--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@t3-oss/env-core": "^0.13.10",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-query": "^5.90.21",
     "@tanstack/react-router": "^1.159.10",
     "@tanstack/react-router-ssr-query": "^1.159.10",
