--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,11 @@
     "@t3-oss/env-core": "^0.13.10",
     "@tabler/icons-react": "^3.36.1",
     "@tailwindcss/vite": "^4.1.17",
+    "@tanstack/devtools-vite": "^0.5.1",
+    "@tanstack/react-devtools": "^0.9.5",
     "@tanstack/react-form": "^1.28.3",
     "@tanstack/react-query": "^5.90.21",
+    "@tanstack/react-query-devtools": "^5.91.3",
     "@tanstack/react-router": "^1.159.10",
     "@tanstack/react-router-ssr-query": "^1.159.10",
     "@tanstack/router-plugin": "^1.159.12",
