--- a/api/package.json
+++ b/api/package.json
@@ -35,7 +35,8 @@
     "class-validator": "^0.14.3",
     "fastify": "^5.7.4",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
