--- a/api/package.json
+++ b/api/package.json
@@ -22,6 +22,7 @@
     "prisma:generate": "npx prisma generate"
   },
   "dependencies": {
+    "@fastify/multipart": "^9.4.0",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.3",
     "@nestjs/core": "^11.0.1",
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^11.0.1",
     "@scalar/nestjs-api-reference": "^1.0.23",
     "@types/jest": "^30.0.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
